1. Fix bug in doing find on node with multiple hits. Links in toast were not working. 2. Only apply word wrapping on pre tags for non-rpm cell values.

--- a/src/main/webapp/css/visualize.css
+++ b/src/main/webapp/css/visualize.css
@@ -61,7 +61,7 @@ div.col-width-xs {
     user-select: initial;
 }
 
-pre {
+.wordwrap{
     white-space: pre-wrap;
     white-space: -moz-pre-wrap;
     white-space: -pre-wrap;
